# test_task_itbell

./: .gitignore  Makefile  manage.py  pyproject.toml
it_bell_news/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  serializer.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  serializer.py  view.py
users/migrations/: 0001_initial.py
